test/shouldnt-compile/wrong-flags.cpp
#include "common.hpp"


void check() {
  Enums e = OtherEnums{OtherEnum::One};
}
